Fix logo bloating/alignment on in-between devices

--- a/app/assets/stylesheets/modules/masthead.scss
+++ b/app/assets/stylesheets/modules/masthead.scss
@@ -17,7 +17,7 @@
     #masthead {
       .masthead-logo {
         display: block;
-        width: 100%;
+        max-width: 100%;
         margin-left: 0;
       }
     }
